--- a/po/ro.po
+++ b/po/ro.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: libfm 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 14:40+0200\n"
-"PO-Revision-Date: 2012-09-20 20:27+0300\n"
-"Last-Translator: Mișu Moldovan <dumol@l10n.ro>\n"
+"PO-Revision-Date: 2012-10-09 12:53+0200\n"
+"Last-Translator: Mișu <dumol@l10n.ro>\n"
 "Language-Team: Romanian <diacritice@googlegroups.com>\n"
 "Language: ro\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < "
 "20)) ? 1 : 2);;\n"
-"X-Generator: Virtaal 0.7.0\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../data/ui/app-chooser.glade.h:1
 msgid "Choose An Application"
@@ -146,7 +146,7 @@ msgstr "<b>D_eschide cu:</b>"
 
 #: ../data/ui/file-prop.glade.h:9
 msgid "Select the application used to open files of this type "
-msgstr "Alegeți aplicația pentru deschiderea fișierelor de acest tip"
+msgstr "Alegeți programul pentru deschiderea fișierelor de acest tip"
 
 #: ../data/ui/file-prop.glade.h:10
 msgid "<b>Target:</b>"
@@ -395,9 +395,8 @@ msgid "Name/_Location"
 msgstr ""
 
 #: ../data/ui/filesearch.glade.h:16
-#, fuzzy
 msgid "<b>File Type</b>"
-msgstr "<b>Tip de fișier:</b>"
+msgstr "<b>Tip de fișier</b>"
 
 #: ../data/ui/filesearch.glade.h:17
 msgid "Only search for files of following types"
